<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".view.MovieDetailFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.6"
            android:background="@drawable/rounded_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="5dp"
            android:background="@color/white"
            android:text="@string/example_title"
            android:textAlignment="center"
            android:textColor="@color/color2"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <ImageView
            android:id="@+id/ivMovieDetail"
            android:layout_width="190dp"
            android:layout_height="247dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/img_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDetail" />

        <TextView
            android:id="@+id/textViewStarsDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:text="@string/textView_stars"
            android:textAlignment="center"
            android:textColor="@color/color1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivMovieDetail"
            app:layout_constraintTop_toTopOf="@+id/ivMovieDetail" />

        <TextView
            android:id="@+id/tvStarsDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/example_stars"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivMovieDetail"
            app:layout_constraintTop_toBottomOf="@+id/textViewStarsDetail" />

        <TextView
            android:id="@+id/textViewPlotDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="5dp"
            android:background="@color/white"
            android:text="@string/textView_Plot"
            android:textAlignment="center"
            android:textColor="@color/color1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieDetail" />

        <TextView
            android:id="@+id/tvPlotDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/example_plot"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPlotDetail" />

        <TextView
            android:id="@+id/textViewReleaseDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_layout"
            android:backgroundTint="@color/color4"
            android:paddingVertical="5dp"
            android:paddingHorizontal="40dp"
            android:text="@string/textView_Release"
            android:textAlignment="center"
            android:textColor="@color/color2"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toStartOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView12" />

        <TextView
            android:id="@+id/tvReleaseStateDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/example_release"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintEnd_toStartOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDetail" />


        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="153dp"
            android:layout_height="143dp"
            android:alpha="0.5"
            android:src="@drawable/logo"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlotDetail" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>