<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="wrap_content"
        android:layout_height="221dp"
        android:background="@drawable/cinta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="15dp"
            android:background="@color/color1"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/cl1"
            app:layout_constraintEnd_toEndOf="@id/cl1"
            app:layout_constraintStart_toStartOf="@id/cl1"
            app:layout_constraintTop_toTopOf="@id/cl1">

            <ImageView
                android:id="@+id/ivMovie"
                android:layout_width="128dp"
                android:layout_height="176dp"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="110dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/img_movie" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/example_title"
                android:textColor="@color/color4"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivMovie"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewRelease"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/color4"
                android:text="@string/textView_Release"
                android:textAlignment="center"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/tvReleaseState"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivMovie" />

            <TextView
                android:id="@+id/tvReleaseState"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/example_release"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivMovie" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>